--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "smooth-json"
 author = "Jacob Latonis"
+description = "Flatten serde_json Value variants into serde_json Objects ready for use in columnar or table like usages."
 readme = "readme.md"
 version = "0.1.0"
 edition = "2021"
-repository = ""
+repository = "https://github.com/latonis/smooth-json"
 keywords = ["flatten", "json", "parquet", "smooth", "unnest"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
