--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 edition = "2021"
 repository = "https://github.com/latonis/smooth-json"
 keywords = ["flatten", "json", "parquet", "smooth", "unnest"]
+categories = ["data-structures"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
