--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "smooth-json"
 authors = ["Jacob Latonis"]
 description = "Flatten serde_json Value variants into serde_json Objects ready for use in columnar or table like usages."
 readme = "readme.md"
+license = "MIT"
 version = "0.1.0"
 edition = "2021"
 repository = "https://github.com/latonis/smooth-json"
